2006-05-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* url-http.el (url-http-file-exists-p): Test if status is integer.

2006-05-05  Andreas Seltenreich  <seltenreich@gmx.de>  (tiny change)

	* url-http.el (url-http-parse-headers): Don't reuse connection if
	"Connection: close" header was seen.

2006-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-gw.el (url-open-stream): Don't hide errors.
	(url-gateway-nslookup-host, url-open-telnet): Use with-current-buffer.

	* url-handlers.el (url-insert): New function.
	(url-insert-file-contents): Use it.

2006-03-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-handlers.el (url-handler-directory-file-name): New handler.
	(url-file-local-copy): Plug race condition security hole.

2006-03-27  Romain Francoise  <romain@orebokech.com>

	* url-irc.el (url-irc-rcirc, url-irc-erc): New functions.
	(url-irc-function): Add rcirc and ERC to the list of IRC clients.
	Default to rcirc, since ZenIRC isn't part of Emacs.

2006-03-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-http.el (url-http-find-free-connection): Fix braino in last fix.

2006-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-http.el (url-http-find-free-connection): Don't kill the process
	when killing the temp buffer.
	(url-http-symbol-value-in-buffer): Massage to make it clear to the
	byte-compiler that the function is defined.

2006-02-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url.el (url-redirect-buffer): New var.
	(url-retrieve-synchronously): Use it to follow redirections.

	* url-http.el: Require `url' rather than try to autoload parts of it.
	(url-http-find-free-connection): `url-open-stream' needs a real buffer.
	(url-http-parse-headers): Set `url-redirect-buffer' when following
	a redirection reply.

2006-01-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-news.el: Move defvars out of eval-when-compile.
	(url-news-fetch-message-id, url-news-fetch-newsgroup):
	Use with-current-buffer.
