@@ -1,3 +1,14 @@
+2006-07-11  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* url-cookie.el: Remove spurious * in docstrings.
+	(url-cookie-write-file): Don't use versioned backups.
+	(url-cookie-host-can-set-p): Remove unused var `tmp'.
+
+2006-07-04  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>  (tiny change)
+
+	* url-cookie.el (url-cookie-save-interval): Move to url-cookie group.
+	(url-cookie-write-file): Reset url-cookies-changed-since-last-save.
+
 2006-05-12  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* url-http.el (url-http-file-exists-p): Test if status is integer.
